--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -5,11 +5,13 @@
         <title>My First Webpage</title>
     </head>
     <body>
-        <p>Tempor sunt ipsum do irure. Ipsum ullamco veniam nulla veniam qui mollit enim duis voluptate ea elit. Exercitation commodo culpa cillum incididunt cillum ea voluptate deserunt duis dolor consectetur aute. Id voluptate nulla ut irure amet ad officia voluptate ipsum magna.</p>
-        <p>Cillum aute aute culpa est ex velit esse irure esse. Anim amet nostrud dolore aute ad consequat ullamco nulla. Lorem ad nostrud ut exercitation duis veniam officia ea sit ipsum sunt cillum. Minim adipisicing ea non consequat minim sint exercitation ex ipsum.
-
-Nostrud nisi ut nulla ipsum amet dolor laborum occaecat pariatur. Consectetur elit do culpa irure. Ullamco commodo quis laboris elit culpa incididunt quis dolore nulla sunt minim. Excepteur eiusmod Lorem consequat esse occaecat esse dolor magna dolore ut voluptate. Aliquip proident proident consectetur dolor do laborum dolor nisi aliquip mollit commodo consectetur.
-
-Non nulla enim cillum ea culpa sunt ea proident nulla commodo enim. Reprehenderit adipisicing est do incididunt aute ullamco amet duis amet ad irure laborum deserunt non. Cupidatat occaecat proident aliquip enim cupidatat consectetur irure ad sit excepteur pariatur labore. Cupidatat nisi ex cillum commodo dolor.</p>
+        <h1>Tempor sunt ipsum do irure.</h1>
+        <p>Ipsum ullamco veniam nulla veniam qui mollit enim duis voluptate ea elit. Exercitation commodo culpa cillum incididunt cillum ea voluptate deserunt duis dolor consectetur aute. Id voluptate nulla ut irure amet ad officia voluptate ipsum magna.</p>
+        <!--this is just a comment to mark the first paragraph-->
+        <p>Cillum aute aute culpa est ex velit esse irure esse. Anim amet nostrud dolore aute ad consequat ullamco nulla. Lorem ad nostrud ut exercitation duis veniam officia ea sit ipsum sunt cillum. Minim adipisicing ea non consequat minim sint exercitation ex ipsum.</p>
+        <!--second comment-->
+        <p>Nostrud nisi ut nulla <strong> amet dolor laborum occaecat</strong> pariatur. Consectetur elit do culpa irure. Ullamco commodo quis laboris elit culpa incididunt quis dolore nulla sunt minim. Excepteur eiusmod Lorem consequat esse occaecat esse dolor magna dolore ut voluptate. Aliquip proident proident consectetur dolor do laborum dolor nisi aliquip mollit commodo consectetur.</p>
+        <!--third comment-->
+        </p>Non nulla <em>enim cillum ea culpa sunt ea proident</em> nulla commodo enim. Reprehenderit adipisicing est do incididunt aute ullamco amet duis amet ad irure laborum deserunt non. Cupidatat occaecat proident aliquip enim cupidatat consectetur irure ad sit excepteur pariatur labore. Cupidatat nisi ex cillum commodo dolor.</p>
     </body>
 </html>
