fix error line 15

--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -12,6 +12,6 @@
         <!--second comment-->
         <p>Nostrud nisi ut nulla <strong> amet dolor laborum occaecat</strong> pariatur. Consectetur elit do culpa irure. Ullamco commodo quis laboris elit culpa incididunt quis dolore nulla sunt minim. Excepteur eiusmod Lorem consequat esse occaecat esse dolor magna dolore ut voluptate. Aliquip proident proident consectetur dolor do laborum dolor nisi aliquip mollit commodo consectetur.</p>
         <!--third comment-->
-        </p>Non nulla <em>enim cillum ea culpa sunt ea proident</em> nulla commodo enim. Reprehenderit adipisicing est do incididunt aute ullamco amet duis amet ad irure laborum deserunt non. Cupidatat occaecat proident aliquip enim cupidatat consectetur irure ad sit excepteur pariatur labore. Cupidatat nisi ex cillum commodo dolor.</p>
+        <p>Non nulla <em>enim cillum ea culpa sunt ea proident</em> nulla commodo enim. Reprehenderit adipisicing est do incididunt aute ullamco amet duis amet ad irure laborum deserunt non. Cupidatat occaecat proident aliquip enim cupidatat consectetur irure ad sit excepteur pariatur labore. Cupidatat nisi ex cillum commodo dolor.</p>
     </body>
 </html>
